namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: czepeda
  labels:
    tipo: desarrollo
