service_bd.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbmysql
  labels:
    app: basedatos
spec:
  type: NodePort
  ports:
    - targetPort: 3306
      port: 3306
      nodePort: 30002
  selector:
    app: basedatos
