service_web.yaml
apiVersion: v1
kind: Service
metadata:
  name: appwebservice
  labels:
    app: appweb
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
      protocol: TCP
  selector:
    app: appweb
