ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-czepeda
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.czepeda.com
  http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: appwebservice
          servicePort: 80
